--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,6 @@
 name: Build App
 
-on:
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-      tags:
-        description: 'Test scenario tags'
-  push:
-    branches: ['prod']
+on: workflow_dispatch
 
 jobs:
   build:
@@ -18,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [18.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -26,7 +16,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
       - uses: actions/upload-artifact@v4
@@ -39,9 +29,16 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [18.x]
     steps:
       - uses: actions/checkout@v4
+
+      - uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["./devops-nginx.conf"]'
+        env:
+          DOMAIN: ${{vars.DOMAIN}}
+          SUB_DOMAIN: ${{vars.SUB_DOMAIN}}
 
       - uses: actions/download-artifact@v4
         with:
@@ -63,12 +60,15 @@ jobs:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
 
+      - name: Print devops-nginx.conf
+        run: cat ./devops-nginx.conf
+
       - name: Build and push Docker images
         uses: docker/build-push-action@v6.9.0
         with:
           context: .
           push: true
-          tags: rosalesponcer/${{vars.DOCKER_REPOSITORI}}:${{github.sha}}
+          tags: ${{secrets.DOCKER_USERNAME}}/${{vars.DOCKER_REPOSITORI}}:${{github.sha}}
 
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.1.0
@@ -80,12 +80,12 @@ jobs:
           command_timeout: 30s
           protocol: tcp6
           script: |
-            docker stop rosalesponcer.com || true
-            docker rm rosalesponcer.com || true
+            docker stop ${{vars.SUB_DOMAIN}}.${{vars.DOMAIN}} || true
+            docker rm ${{vars.SUB_DOMAIN}}.${{vars.DOMAIN}} || true
             docker pull ${{secrets.DOCKER_USERNAME}}/${{vars.DOCKER_REPOSITORI}}${{github.sha}}
             docker run -d \
-                --name rosalesponcer.com \
-                --env VIRTUAL_HOST=rosalesponcer.com \
+                --name ${{vars.SUB_DOMAIN}}.${{vars.DOMAIN}} \
+                --env VIRTUAL_HOST=${{vars.SUB_DOMAIN}}.${{vars.DOMAIN}} \
                 --restart unless-stopped \
                 --network docker-multiple_default \
                 ${{secrets.DOCKER_USERNAME}}/${{vars.DOCKER_REPOSITORI}}:${{github.sha}}
