--- a/devops-nginx.conf
+++ b/devops-nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name price-history.rosalesponcer.com;
+    server_name #{SUB_DOMAIN}#.#{DOMAIN}#;
 
     location / {
         root /data/www;
