--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:1.27.2
 
-COPY ./dist/rp-price-history/browser /data/www/
+COPY ../dist/rp-price-history/browser /data/www/
 COPY devops-nginx.conf /etc/nginx/conf.d/devops-nginx.conf
 COPY nginx.conf /etc/nginx/nginx.conf
