--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
     "lib": ["ES2022", "dom"],
     "baseUrl": "./",
     "paths": {
-      "@core*": ["src/app/core/*"]
+      "@core*": ["src/app/core/*"],
+      "@shared*": ["src/app/shared/*"],
+      "@views*": ["src/app/views/*"]
     }
   },
   "angularCompilerOptions": {
