--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,7 @@ jobs:
             docker run -d \
                 --name ${{vars.SUB_DOMAIN}}.${{vars.DOMAIN}} \
                 --env VIRTUAL_HOST=${{vars.SUB_DOMAIN}}.${{vars.DOMAIN}} \
+                --env LETSENCRYPT_HOST=${{vars.SUB_DOMAIN}}.${{vars.DOMAIN}} \
                 --restart unless-stopped \
                 --network docker-multiple_default \
                 ${{secrets.DOCKER_USERNAME}}/${{vars.DOCKER_REPOSITORI}}:${{github.sha}}
